# pymavswarm

./: .cspell.json  .gitignore  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deployment.yml  docs.yml  main.yml
demonstrations/: collision_prevention.py
demonstrations/resources/: collision_trajectory.yaml  single_point_collision.yaml
docs/: requirements.txt
docs/source/: api.rst  conf.py  contribution.rst  examples.rst  index.rst  installation.rst  modules.rst  overview.rst  pymavswarm.handlers.rst  pymavswarm.message.rst  pymavswarm.mission.rst  pymavswarm.rst  pymavswarm.safety.rst  pymavswarm.state.rst  pymavswarm.tests.rst  pymavswarm.types.rst  pymavswarm.utils.rst
evaluations/: plot_latency.py  plot_planned_trajectory.py  plot_reachable_sets.py  plot_trajectories.py
examples/: README.md  arming.py  arming_example.py  check_state.py  check_state_example.py  collision_prevention.py  collision_prevention_no_flight.py  companion_computer.py  companion_computer_example.py  dummy_example.py  flight_mode_change_example.py  goto.py  mission_report.py  read_write_parameter_example.py  send_debug.py  set_flight_mode.py  set_home_position.py  set_parameter.py  subclass_mavswarm.py  swarm_mission.py  takeoff_sequence.py  test.py
examples/mission_report/: latency_plot.html  mission_report.txt  noise.html  remnoise.html  (+3 more)
pymavswarm/: Agent.py  Connection.py  MavSwarm.py  __init__.py  _types.py  _typing.py  agent.py  connection.py  connection_old.py  frames.py  mavswarm.py  mavswarm_old.py
(+193 files in other folders)
