[metadata]
name = pymavswarm
version = 0.1.5
description = Python library used to communicate with multiple UAS simultaneously using MAVLink
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unl-nimbus-lab/pymavswarm
author = Evan Palmer
author_email = evanp922@gmail.com
license = GPLv3
platforms = any
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
project_urls =
    Source = https://github.com/unl-nimbus-lab/pymavswarm

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pymavlink>=2.3.3
    monotonic>=1.6
    pyserial>=3.0
    pandas>=1.4.3
    numpy>=1.23.1
    PyYAML>=6.0
zip_safe = true

[options.packages.find]
include = pymavswarm, pymavswarm.*

[flake8]
max-line-length = 88
exclude = .tox,*.egg,build,temp,devel,.mypy_cache,__pycache__
select = E,W,F
doctests = True
verbose = 2
ignore =
    E203
    W503
per-file-ignores =
    pymavswarm/handlers/message_receivers.py:F811
    pymavswarm/tests/*:F401
    __init__.py: F401

[codespell]
ignore-words-list =
    acro
    ahrs
    bynumber
    compid
    eeprom
    hdop
    horiz
    mavlink
    mavpackettype
    mavswarm
    mavutil
    pydocstyle
    pymavlink
    pymavswarm
    redef
    rtype
    systemid
    uart
    vdop
ignore-regex = https://([\w/\.])+

[isort]
profile=black
src_paths=pymavswarm

[pydocstyle]
ignore = D100,D203,D405,D212,D104,D403

[coverage:report]
ignore_errors = False
show_missing = True
exclude_lines =
    pragma: no-cover
    pass

[coverage:run]
branch = true
parallel = true
source = pymavswarm
